@@ -14,10 +14,15 @@
 #undef MEMDEBUG // link to MSVCRT
 #endif
 
+// unless defined, Weight(0) will may give bad results when computed with, depending on math library behavior
+#undef WEIGHT_CORRECT_ZERO
+// however, carmel checks for zero weight before multiplying in a bad way.  if you get #INDETERMINATE results, define this
+
 // bunch of small allocators wastes memory but faster new/delete
 #define CUSTOMNEW
+// crashes if not defined (??!)
 
-// weak attempt at handling infinite sum of *e* paths with finite propogation.  not recommended
+// weak attempt at handling infinite sum of *e* paths with finite approximation.  not recommended, as the math is untested and suspect
 #undef N_E_REPS
 
 // allows WFST to be indexed in either direction?  not recommended.
